Full Functionality Lockdown: All buttons linked to blockchain, admin hub fixed (V1.1.0)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,6 +129,28 @@
                 <div id="token-symbol">AEG</div>
             </div>
         </div>
+
+        <!-- Integrated Admin Hub (Owner Only) -->
+        <div id="owner-actions" class="protocol-box owner-box fade-in" style="display: none;">
+            <div class="service-header">
+                <div class="service-icon-svg admin-icon">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ffd700" stroke-width="2">
+                        <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+                        </style>
+                </div>
+                <div class="service-info">
+                    <h3 data-i18n="owner_panel">協議管理員終端</h3>
+                    <p data-i18n="owner_desc">僅限當前合約擁有人 (Owner) 存取資產鑄造權限。</p>
+                </div>
+            </div>
+            <div class="input-stack admin-stack">
+                <input type="text" id="mint-address" placeholder="接收者錢包地址 (0x...)">
+                <div class="input-inline">
+                    <input type="number" id="mint-amount" placeholder="鑄造數量 (AEG)">
+                    <button id="mint-btn" class="btn-service-primary admin-btn" data-i18n="mint_btn">執行鑄造</button>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
