--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,8 @@
                 <span class="brand-name-main">AEGIS</span>
             </div>
             <div class="nav-actions">
+                <a href="https://aerodrome.finance/swap?from=eth&to=0x0000000000000000000000000000000000000000"
+                    target="_blank" class="btn-buy-nav" data-i18n="nav_buy">購買 AEG</a>
                 <select id="lang-select" class="lang-switcher">
                     <option value="zh-TW">繁體中文</option>
                     <option value="en">English</option>
@@ -54,6 +56,10 @@
                     <div class="massive-balance">
                         <span class="currency-symbol">AEG</span>
                         <span id="user-balance" class="value-text">0.00</span>
+                    </div>
+                    <div class="usd-value-container">
+                        <span class="usd-symbol">≈ $</span>
+                        <span id="user-usd-balance">0.00</span>
                     </div>
                     <div class="balance-change-indicator">
                         <span class="indicator-up">APY 18.5% 已激活</span>
@@ -131,6 +137,13 @@
         </div>
 
 
+        <!-- Transaction History -->
+        <section class="transaction-history-section fade-in">
+            <h4 data-i18n="history_title">近期協議交互紀錄</h4>
+            <div id="tx-history-list" class="history-list">
+                <div class="history-placeholder" data-i18n="history_empty">尚無近期鏈上紀錄</div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
