feat: Aegis  Mainnet Official Launch & UI Optimization 🛡️🚀

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,19 @@
 
         <!-- Service Component Grid -->
         <section class="action-services-grid fade-in">
+            <!-- Buy AEG Action -->
+            <div class="glass-card buy-section fade-in">
+                <div class="card-header">
+                    <i class="fas fa-shopping-cart"></i>
+                    <h2 data-i18n="buy_title">Get AEG</h2>
+                </div>
+                <p class="section-desc" data-i18n="buy_desc">Trade on Aerodrome (Base DEX)</p>
+                <a href="https://aerodrome.finance/swap?from=eth&to=0xCFEF8Ee0197E846805Af515412256f24cCE3061d"
+                    target="_blank" class="btn-primary buy-btn">
+                    <span data-i18n="buy_action">Buy on Aerodrome</span>
+                    <i class="fas fa-external-link-alt"></i>
+                </a>
+            </div>
             <!-- Staking Service -->
             <div class="service-card staking-service">
                 <div class="service-header">
