--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aegis (AEG) | 數位權益資產看板 V1.0.9</title>
-    <link rel="stylesheet" href="style.css?v=1.0.9">
+    <title>Aegis (AEG) | 數位權益資產看板 V1.1.0</title>
+    <link rel="stylesheet" href="style.css?v=1.1.0">
     <link rel="icon" type="image/png" href="logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono&display=swap"
         rel="stylesheet">
@@ -45,17 +45,16 @@
 
     <main class="portfolio-container">
         <!-- Elite Header Section -->
-        <header class="user-header fade-in">
-            <div class="welcome-box">
-                <div class="status-indicator">
+        <section class="portfolio-hero fade-in">
+            <div class="user-header">
+                <div class="status-badge">
                     <span class="pulse-dot"></span>
-                    <span data-i18n="status_mainnet">Base Mainnet Live</span>
+                    <span>LIVE ON BASE MAINNET</span>
                 </div>
-                <h1 data-i18n="portfolio_welcome">Aegis Executive Dashboard</h1>
-                <p class="subtitle-dim" data-i18n="portfolio_subtitle">Securing the next billion assets with adaptive
-                    protocol protection.</p>
+                <h1>AEGIS GLOBAL</h1>
+                <p class="hero-subtitle">精英級去中心化安全與收益協議，致力於構建透明、精簡、高效的資產管理生態。</p>
             </div>
-        </header>
+        </section>
 
         <!-- Main Balance Visualizer -->
         <section class="main-stats-section fade-in">
