--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,8 +78,31 @@
 
         <!-- Service Component Grid -->
         <section class="action-services-grid fade-in">
+            <!-- Presale Buy (New) -->
+            <div class="service-card presale-service fade-in" style="border: 1px solid var(--accent-color);">
+                <div class="service-header">
+                    <div class="service-icon-svg" style="background: var(--accent-color);">
+                        <i class="fas fa-rocket"></i>
+                    </div>
+                    <div class="service-info">
+                        <h3 data-i18n="presale_title">種子輪預售</h3>
+                        <p data-i18n="presale_desc">直接使用 ETH 兌換 AEG (固定匯率)</p>
+                    </div>
+                </div>
+                <div class="service-action">
+                    <div class="input-group-elite">
+                        <i class="fab fa-ethereum"></i>
+                        <input type="number" id="buy-eth-amount" placeholder="輸入 ETH 數量">
+                        <span class="unit-tag">ETH</span>
+                    </div>
+                    <button id="buy-tokens-btn" class="btn-elite btn-accent" data-i18n="presale_btn">立即購買</button>
+                    <p class="service-footer-hint" data-i18n="presale_hint">資金將全數用於開啟 Aerodrome 流動性池。</p>
+                </div>
+            </div>
+
             <!-- Buy AEG Action -->
             <div class="service-card buy-service fade-in">
+
                 <div class="service-header">
                     <div class="service-icon-svg">
                         <i class="fas fa-shopping-cart"></i>
